# boggle

./: README.md  boggle.cabal  stack.yaml
html/: index.html
src/: BoggleSolver.hs  Main.hs
